# juce-sync-test

./: .gitignore  CMakeLists.txt
src/: MidiClockInput.cpp  MidiClockInput.hpp  SyncEditor.cpp  SyncEditor.hpp  SyncProcessor.cpp  SyncProcessor.hpp
